argocd/ingress-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd # Where your application is deployed
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "argo.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # Use backendRefs for Gateway API v1beta1
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "argo.kerrlab.app"
  rules:
    - matches:
      - headers:
          - type: Exact
            name: Content-Type
            value: application/grpc
      backendRefs:
        - name: argocd-server
          port: 80
